--- a/css/default.css
+++ b/css/default.css
@@ -165,6 +165,10 @@ body {
 	margin-bottom: 2rem;
 }
 
+.heading {
+	font-size: 2.5rem;
+}
+
 .toggle-switch-container {
 	display: flex;
 	gap: 1rem;
