--- a/css/default.css
+++ b/css/default.css
@@ -234,7 +234,7 @@ body {
 	border-radius: 50%;
 	background-color: var(--theme-key2-bg);
 	cursor: pointer;
-	transition: left 0.2s;
+	transition: left 0.2s, filter 0.2s;
 }
 
 /* Calculator */
@@ -268,6 +268,7 @@ body {
 	transition: filter 0.2s;
 }
 
+.toggle-switch:hover .toggle-switch-button,
 .key:hover {
 	filter: brightness(130%);
 }
